Title layout changes

--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -18,7 +18,7 @@
         {% include "header.twig" %}
 
         <main>
-            <div class=" mx-auto py-6 sm:px-6 lg:px-8">
+            <div class=" mx-auto py-6 sm:px-6 lg:px-8 overflow-y-scroll">
                 <div class="px-4 py-6 sm:px-0">
                     <div class="border-4 border-dashed border-gray-200 rounded-lg">
                         {% block content %}{% endblock %}
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </main>
-        <footer class="bg-manatee-200 flex items-center py-1 sm:px-6 lg:px-8">
+        <footer class="bg-manatee-200  py-1 sm:px-6 lg:px-8">
             <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a> ― &copy; 2012-{{"now"|date('Y')}} Rainer Volz</p>
         </footer>
     </div>
