--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -16,7 +16,11 @@
     }
 
     .menu-link {
-        @apply flex-grow text-center bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
+        @apply flex-grow text-center bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-steel-400 focus:ring-steel-300
+    }
+
+    .active {
+        @apply border-2 border-blush-400
     }
 
     .menu-link > svg {
