--- a/templates/admin_configuration.twig
+++ b/templates/admin_configuration.twig
@@ -1,6 +1,6 @@
-{% extends 'layout.twig' %}
-
+{% extends 'layout-default.twig' %}
 {% block content %}
+
 {% include "flash_messages.twig" %}
 <form action="{{page.rot}}/admin/configuration/" method="post" id="adminform">
 	<fieldset class="config-fieldset">
