--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,1 +1,3 @@
-<p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012-{{"now"|date('Y')}} Rainer Volz</p>
+<footer class="bg-manatee-200  py-1 sm:px-6 lg:px-8">
+    <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a></p>
+</footer>
