--- a/templates/index_last30.twig
+++ b/templates/index_last30.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.twig' %}
+{% extends 'layout-default.twig' %}
 
 {% block headerlinks %}
 <link rel="related" href="{{page.rot}}/opds/" 
