--- a/templates/login.twig
+++ b/templates/login.twig
@@ -1,4 +1,7 @@
-{% extends "layout-mini.twig" %}
+{% extends "layout-blank.twig" %}
+
+{% block headerlinks %}{% endblock %}
+
 {% block content %}
     <h2 class="text-2xl flex items-center justify-center py-4 px-4 sm:px-6 lg:px-8">{{page.glob.l10n.login}}</h2>
     <div class="flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
