--- a/templates/tags.twig
+++ b/templates/tags.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.twig' %}
+{% extends 'layout-default.twig' %}
 
 {% block headerlinks %}
     <link rel="related" href="{{page.rot}}/opds/" type="application/atom+xml;profile=opds-catalog" title="OPDS index">
