--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ page.rot }}/style/style.css">
     <script src="{{page.rot}}/js/modernizr-3.11.2.min.js"></script>
     <script src="{{page.rot}}/js/turbolinks-5.2.0.min.js" defer></script>
+    <script src="{{page.rot}}/js/alpine-magic-helpers-0.5.1.min.js" defer></script>
     <script src="{{page.rot}}/js/alpine-2.7.3.min.js" defer></script>
     <script src="{{page.rot}}/js/main.js" defer></script>
 </head>
