--- a/templates/authors_listview.twig
+++ b/templates/authors_listview.twig
@@ -1,4 +1,4 @@
-<div class="listview">
+<div class="listview-titles">
     {% for author in authors %}
         {% if author.initial != "" %}
             <li data-role="list-divider"> {{ author.initial }}</li>
