--- a/templates/series_listview.twig
+++ b/templates/series_listview.twig
@@ -1,4 +1,4 @@
-<div class="listview">
+<div class="listview-titles">
     {% for this_series in series %}
         {% if series.initial != "" %}
             <li data-role="list-divider"> {{ this_series.initial }}</li>
