--- a/templates/tags_listview.twig
+++ b/templates/tags_listview.twig
@@ -1,4 +1,4 @@
-<div class="listview">
+<div class="listview-titles">
     {% for tag in tags %}
         {% if tag.initial != "" %}
             <li data-role="list-divider"> {{ tag.initial }}</li>
