--- a/templates/author_entry.twig
+++ b/templates/author_entry.twig
@@ -1,22 +1,24 @@
 <a href="{{page.rot}}/authors/{{ author.id }}/">
-    <div class="card">
-        {% if author.thumbnail %}
-            <img class="card-image" src="{{page.rot}}/static/authorthumbs/{{ author.thumbnail.url }}/" alt="" width="384" height="512">
-        {% else %}
-            <div class="card-image">
+    <div class="relative bg-white">
+        <div class="h-56 bg-blush-400 absolute left-0 h-full w-1/3">
+            {% if author.thumbnail %}
+                <img class="w-full h-full object-cover" src="{{page.rot}}/{{ author.thumbnail.url }}/" alt="">
+            {% else %}
                 {# Heroicons: user #}
-                <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg class="w-full h-full object-cover" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                 </svg>
+            {% endif %}
+        </div>
+        <div class="relative max-w-10xl mx-auto px-4 sm:px-6 py-2">
+            <div class="mx-auto max-w-none mr-0 ml-auto w-2/3 pl-5">
+                <p class="text-lg font-semibold h-14 truncate-2-lines">
+                    {{ author.sort }}
+                </p>
+                <p class="text-center mt-2">
+                    <span class="count-value">{{author.anzahl}}</span>
+                </p>
             </div>
-        {% endif %}
-        <div class="card-content">
-            <p class="text-lg font-semibold truncate">
-                {{ author.sort }}
-            </p>
-            <p class="font-medium text-cyan-600 truncate">
-                {{author.anzahl}}
-            </p>
         </div>
     </div>
 </a>
