--- a/templates/tag_entry.twig
+++ b/templates/tag_entry.twig
@@ -1,18 +1,20 @@
 <a href="{{page.rot}}/tags/{{ tag.id }}/">
-    <div class="card">
-        <div class="card-image">
+    <div class="relative bg-white">
+        <div class="h-56 bg-blush-400 absolute left-0 h-full w-1/3">
             {# Heroicons: tag #}
-            <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <svg class="w-full h-full object-cover" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z" />
             </svg>
         </div>
-        <div class="card-content">
-            <p class="text-lg font-semibold truncate">
-                {{ tag.name }}
-            </p>
-            <p class="font-medium text-cyan-600 truncate">
-                {{ tag.anzahl }}
-            </p>
+        <div class="relative max-w-10xl mx-auto px-4 sm:px-6 py-2">
+            <div class="mx-auto max-w-none mr-0 ml-auto w-2/3 pl-5">
+                <p class="text-lg font-semibold h-14 truncate-2-lines">
+                    {{ tag.name }}
+                </p>
+                <p class="text-center mt-2">
+                    <span class="count-value">{{tag.anzahl}}</span>
+                </p>
+            </div>
         </div>
     </div>
 </a>
