--- a/templates/titles_listview.twig
+++ b/templates/titles_listview.twig
@@ -3,7 +3,7 @@
         {% if book.initial != "" %}
             <li data-role="list-divider"> {{ book.initial }}</li>
         {% else %}
-            {% include "title_entry2.twig" %}
+            {% include "title_entry.twig" %}
         {% endif %}
     {% endfor %}
 </div>
