--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,6 +11,9 @@
     .top-link {
         @apply flex-grow bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
     }
+    .other-link {
+        @apply bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
+    }
     .top-link-disabled {
         @apply flex-grow bg-manatee-300 px-1 mx-1 rounded text-black opacity-50
     }
