--- a/templates/author_entry.twig
+++ b/templates/author_entry.twig
@@ -1,5 +1,5 @@
 <a href="{{page.rot}}/authors/{{ author.id }}/">
-    <div class="relative bg-white">
+    <div class="relative bg-white  border-b-2">
         <div class="h-56 bg-blush-400 absolute left-0 h-full w-1/3">
             {% if author.thumbnail %}
                 <img class="w-full h-full object-cover" src="{{page.rot}}/{{ author.thumbnail.url }}/" alt="">
