--- a/templates/tag_entry.twig
+++ b/templates/tag_entry.twig
@@ -1,5 +1,5 @@
 <a href="{{page.rot}}/tags/{{ tag.id }}/">
-    <div class="relative bg-white">
+    <div class="relative bg-white  border-b-2">
         <div class="h-56 bg-blush-400 absolute left-0 h-full w-1/3">
             {# Heroicons: tag #}
             <svg class="w-full h-full object-cover" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
