--- a/templates/title_entry.twig
+++ b/templates/title_entry.twig
@@ -1,5 +1,5 @@
 <a href="{{page.rot}}/titles/{{ book.id }}/">
-	<div class="relative bg-white">
+	<div class="relative bg-white border-b-2">
 		{#  {% if book.thumbnail %}
 			<img class="card-image" src="{{page.rot}}/static/titlethumbs/{{ book.id }}/" alt="" width="384" height="512">
 		{% else %}
@@ -8,26 +8,26 @@
 				<path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
 			</svg>
 		{% endif %} #}
-		<div class="h-56 bg-indigo-600 sm:h-72 lg:absolute lg:left-0 lg:h-full lg:w-1/3">
+		<div class="h-56 bg-blush-400 absolute left-0 h-full w-1/3">
 			<img class="w-full h-full object-cover" src="{{page.rot}}/static/titlethumbs/{{ book.id }}/" alt="">
 		</div>
-		<div class="relative max-w-10xl mx-auto px-4 py-8 sm:py-12 sm:px-6 lg:py-16">
-			<div class="max-w-3xl mx-auto lg:max-w-none lg:mr-0 lg:ml-auto lg:w-2/3 lg:pl-5">
-				<p class="text-lg font-semibold truncate">
+		<div class="relative max-w-10xl mx-auto px-4  sm:px-6 py-2">
+			<div class="max-w-3xl mx-auto max-w-none mr-0 ml-auto w-2/3 pl-5">
+				<p class="text-lg font-semibold h-14 truncate-2-lines">
 					{{ book.title }}
 				</p>
 				<p>
 					{% set pb = book.pubdate|date("Y") %}
-					{% if pb != "0101" %} {{ pb }} {% endif %}
+					{% if pb != "0101" %}{{ pb }}{% else%}&nbsp;{% endif %}
 				</p>
 				<p class="font-medium text-cyan-600 truncate">
 					{{book.author_sort}}
 				</p>
-				<p>
+				<p class="truncate">
 					{{book.addInfo}}
 				</p>
-				<p>
-					{% if book.series %} {{ book.series.sort }}, {{ book.series_index}} {% endif %}
+				<p class="truncate">
+					{% if book.series %} {{ book.series.sort }}, {{ book.series_index}}{% else%}&nbsp;{% endif %}
 				</p>
 			</div>
 		</div>
