--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,6 +8,10 @@
         @apply h-6 text-sm px-1 py-0 disabled:opacity-50
     }
 
+    .top-select {
+        min-width: 5rem;
+        width: auto;
+    }
     .top-link {
         @apply flex-grow bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
     }
