--- a/templates/index_last30.twig
+++ b/templates/index_last30.twig
@@ -28,10 +28,7 @@
         </div>
     </div>
 
-<h2>{{page.glob.l10n.dl30}}</h2>
-<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6">
-    {% for book in books %}
-  	    {% include "title_entry.twig" %}
-    {% endfor %}
-</div>
+    <h2>{{page.glob.l10n.dl30}}</h2>
+    {% include "titles_listview.twig" %}
+
 {% endblock %}
