--- a/templates/navbar_top.twig
+++ b/templates/navbar_top.twig
@@ -6,7 +6,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
         </svg>
-        {{ page.glob.l10n.titles }}
+        <span class="menu-txt">{{ page.glob.l10n.titles }}</span>
     </a>
     <a class="menu-link {% if page.menu == 3 %}active{% endif %}"
        href="{{ page.rot }}/authors/">
@@ -14,7 +14,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
         </svg>
-        {{ page.glob.l10n.authors }}
+        <span class="menu-txt">{{ page.glob.l10n.authors }}</span>
     </a>
     <a class="menu-link {% if page.menu == 5 %}active{% endif %}"
        href="{{ page.rot }}/series/">
@@ -22,7 +22,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/>
         </svg>
-        {{ page.glob.l10n.series }}
+        <span class="menu-txt">{{ page.glob.l10n.series }}</span>
     </a>
     <a class="menu-link {% if page.menu == 4 %}active{% endif %}"
        href="{{ page.rot }}/tags/">
@@ -30,6 +30,6 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"/>
         </svg>
-        {{ page.glob.l10n.tags }}
+        <span class="menu-txt">{{ page.glob.l10n.tags }}</span>
     </a>
 </div>
