Re-added sublist navigation

--- a/templates/author_detail.twig
+++ b/templates/author_detail.twig
@@ -1,6 +1,8 @@
 {% extends 'layout-default.twig' %}
 
-{% block pid %}id="pauthor_detail"{%endblock%}
+{% block navbar %}
+	{% include "navbar_sublist.twig" %}
+{% endblock %}
 
 
 {% block content %}
