--- a/templates/navbar_list.twig
+++ b/templates/navbar_list.twig
@@ -2,7 +2,7 @@
 <div class="flex items-center justify-between pt-2 px-2" xmlns="http://www.w3.org/1999/html">
     <div class="flex items-start">
         {# sort #}
-        {% if page.menu == 2 %}{% include "navbar_titles_sort.twig" %}{% endif %}
+        {% include "navbar_titles_sort.twig" %}
     </div>
     <div class="flex items-center">
         <span class="text-center">
