--- a/templates/series_detail.twig
+++ b/templates/series_detail.twig
@@ -1,5 +1,9 @@
 {% extends 'layout-default.twig' %}
 
+{% block navbar %}
+	{% include "navbar_sublist.twig" %}
+{% endblock %}
+
 {% block content %}
 	<section class="series_detail row">
 		<header>
