--- a/templates/tag_detail.twig
+++ b/templates/tag_detail.twig
@@ -1,5 +1,10 @@
 {% extends 'layout-default.twig' %}
 
+
+{% block navbar %}
+	{% include "navbar_sublist.twig" %}
+{% endblock %}
+
 {% block content %}
 <section class="tag_detail row">
 	<header>
